--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,9 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "condition_variable": "cpp",
+        "mutex": "cpp",
+        "sstream": "cpp"
     }
 }
